Fix change language #15

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,3 +1,6 @@
 {
-	"map_tool": "Map Tool"
+	"page_title": "CK Karten Werkzeug",
+	"dark_mode": "Dunkelmodus",
+	"ui": "UI",
+	"background": "Hintergrund"
 }
