Add beginning of german translation

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,6 +1,30 @@
 {
-	"page_title": "CK Karten Werkzeug",
+	"page_title": "CK Karten Tool",
 	"dark_mode": "Dunkelmodus",
 	"ui": "UI",
-	"background": "Hintergrund"
+	"background": "Hintergrund",
+	"cookies": "Cookies",
+	"cookies.choose_cookie_to_collapse": "Bitte wähle Cookies aus um diese Rubrik zu schließen.",
+	"cookies.enable_analytics": "Analytics erlauben",
+	"cookies.enable_analytics.description": "Ob ich deine Aktivität benutzen kann, um diese Seite zu verbessern.",
+	"cookies.enable_ad_tracking": "Ad Tracking erlauben",
+	"cookies.enable_ad_tracking.description": "Ob Werbung, anhand deiner Aktivität hier, angepasst werden soll. Leider teil von Google Analytics.",
+	"privacy_policy": "Datenschutzbestimmungen",
+	"save": "Speichern",
+	"allow_analytics": "Analytics erlauben",
+	"about": "Über",
+	"about.video_tutorial": "Wie dieses Tool funktioniert",
+	"about.video_tutorial_credits": "Video von Dakon the Mad (eng)",
+	"about.feedback_requests": "Feedback / Anfragen",
+	"about.development_version": "Entwicklungsversion",
+	"about.support_me": "Unterstütze Entwickler & Hosting",
+	"load_map": "Karte Laden",
+	"load_map.example": "Lade Beispiel Karte",
+	"load_map.select_file": "Datei wählen",
+	"load_map.monitor_not_available": "In diesem Browser nicht verfügbar",
+	"load_map.auto_refresh": "Auto. Aktualisieren",
+	"load_map.how_to_find_map": "Wie findest du deine Karte",
+	"load_map.download_image_description": "Speichert ein PNG deiner Karte, inklusive aller Overlays",
+	"load_map.download_image": "Bild der Karte speichern",
+	"load_map.center_map": "Karte zentrieren"
 }
