Revert "1.0 updates for new biomes/bosses/positions, tile highlighting, cleaning up Ceddini's info, removing analytics/ads"
This reverts commit 83c8f58bd50d8be245358a32ff38bf6a595b3bbd.

--- a/src/locales/de/poi.json
+++ b/src/locales/de/poi.json
@@ -12,8 +12,7 @@
 		"stone": "Stone",
 		"sunken_sea": "Sunken Sea",
 		"the_wilderness": "The Wilderness",
-		"desert_of_beginnings": "Desert of Beginnings",
-		"passage": "The Passage"
+		"desert_of_beginnings": "Desert of Beginnings"
 	},
 	"description": "<strong>{{name}}</strong><br>Ort(e): {{locations}}<br>Abstände vom Core: {{radii}}",
 	"bosses": {
@@ -25,9 +24,9 @@
 			"name": "Ghorm",
 			"full_name": "Ghorm the Devourer"
 		},
-		"malugaz": {
-			"name": "Malugaz",
-			"full_name": "Malugaz the Corrupted"
+		"hive_mother": {
+			"name": "Hive Mother",
+			"full_name": "The Hive Mother"
 		},
 		"azeos": {
 			"name": "Azeos",
@@ -40,16 +39,12 @@
 		"ra-akar": {
 			"name": "Ra-Akar",
 			"full_name": "Ra-Akar the Sand Titan"
-		},
-		"core-commander": {
-			"name": "Core Commander",
-			"full_name": "Core Commander"
 		}
 	},
 	"optional_bosses": {
-		"hive_mother": {
-			"name": "Hive Mother",
-			"full_name": "The Hive Mother"
+		"malugaz": {
+			"name": "Malugaz",
+			"full_name": "Malugaz the Corrupted"
 		},
 		"ivy": {
 			"name": "Ivy",
@@ -62,10 +57,6 @@
 		"igneous": {
 			"name": "Igneous",
 			"full_name": "Igneous the Molten Mass"
-		},
-		"urschleim": {
-			"name": "Urschleim",
-			"full_name": "Urschleim"
 		}
 	},
 	"points_of_interest": {
